# LaLeXeR

./: LICENSE  LaLeXeR.cabal  README.md  flake.nix  hattier.cabal  hattier.dhall
.github/workflows/: ci.yml
app/: Main.hs
src/: Format.hs  Hattier.hs  Main.hs  Parser.hs  Types.hs
src/Hattier/: Format.hs  Parser.hs  Types.hs
src/Hattier/Printer/: Combinators.hs  Core.hs
test/: ConfigSpec.hs  Example.hs  Main.hs
test/Unit/: Format.hs  Parser.hs
