cabal-version:      3.0
name:               LaLeXeR
version:            0.1.0.0
synopsis:           LaTe- Haskell formatter
license:            BSD-3-Clause
license-file:       LICENSE
author:             vicgeentor
maintainer:         github@vicgeentor.nl
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

executable lalexer
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
