cabal-version:      3.0
name:               hattier
version:            0.1.0.0
synopsis:           Cute Haskell formatter
license:            BSD-3-Clause
license-file:       LICENSE
author:             vicgeentor
maintainer:         hattier@vicgeentor.nl
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

executable hattier
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0,
                      tasty ^>=1.5.3,
                      tasty-quickcheck ^>=0.11.1,
                      QuickCheck ^>=2.17.1.0,
    hs-source-dirs:   test
    default-language: Haskell2010
