cabal-version: 3.0
name:          hattier
version:       0.1.0.0
synopsis:      Cute Haskell formatter
license:       BSD-3-Clause
license-file:  LICENSE
author:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

maintainer:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

category:      Development
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Parser
  build-depends:
    , base
    , ghc   ^>=9.10.3
  hs-source-dirs:   src
  default-language: Haskell2010

executable hattier
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , hattier
    , ghc               ^>=9.10.3
    , QuickCheck        ^>=2.17.1.0
    , tasty             ^>=1.5.3
    , tasty-quickcheck  ^>=0.11.1
    , tasty-hunit       ^>=0.10.2
    , filepath          ^>=1.5.4.0

  hs-source-dirs:   test
  default-language: Haskell2010
