cabal-version: 3.0
name:          hattier
version:       0.1.0.0
synopsis:      Cute Haskell formatter
license:       BSD-3-Clause
license-file:  LICENSE
author:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

maintainer:
  , "Fyor Lambermont" <f.t.lambermont@students.uu.nl>
  , "Vic ten Bokum" <v.a.a.tenbokum@students.uu.nl>
  , "Lumen de Vries" <l.devries13@students.uu.nl>
  , "Emilia P. Stoyanova" <e.p.stoyanova@students.uu.nl>

category:      Development
build-type:    Simple

common defaults
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

library
  import:          defaults
  hs-source-dirs:  src
  exposed-modules:
    Format
    Types

  build-depends:
    , base
    , mtl   ^>=2.3.2
    , text  ^>=2.1.4

executable hattier
  import:         defaults
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , hattier

test-suite hattier-test
  import:         defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Unit.Format
  build-depends:
    , base
    , hattier
    , QuickCheck        ^>=2.17.1.0
    , tasty             ^>=1.5.3
    , tasty-hunit       ^>=0.10.2
    , tasty-quickcheck  ^>=0.11.1
